--- a/css/styles.css
+++ b/css/styles.css
@@ -291,9 +291,9 @@ padding-top: 20px;
 
 /**** Contact ****/
 
-#contact{
-	/*background-image:url(http://yaw10.bitballoon.com/img/mq5.jpg);*/
-	background-image:url(file:///Users/zeke/Documents/WebDev/img/mq5.jpg);
+#contact{ . https://iyaw.github.io/WebDev/
+	background-image:url(background-image:url(https://iyaw.github.io/WebDev/img/mq5.jpg);
+	/*background-image:url(file:///Users/zeke/Documents/WebDev/img/mq5.jpg);*/
 	background-attachment: fixed;
 	background-size:cover;
 	color: white;
