update on background contact_image

--- a/css/styles.css
+++ b/css/styles.css
@@ -292,7 +292,7 @@ padding-top: 20px;
 /**** Contact ****/
 
 #contact{ . https://iyaw.github.io/WebDev/
-	background-image:url(background-image:url(https://iyaw.github.io/WebDev/img/mq5.jpg);
+	background-image:url(https://iyaw.github.io/WebDev/img/mq5.jpg);
 	/*background-image:url(file:///Users/zeke/Documents/WebDev/img/mq5.jpg);*/
 	background-attachment: fixed;
 	background-size:cover;
