--- a/css/styles.css
+++ b/css/styles.css
@@ -291,7 +291,7 @@ padding-top: 20px;
 
 /**** Contact ****/
 
-#contact{ . https://iyaw.github.io/WebDev/
+#contact{
 	background-image:url(https://iyaw.github.io/WebDev/img/mq5.jpg);
 	/*background-image:url(file:///Users/zeke/Documents/WebDev/img/mq5.jpg);*/
 	background-attachment: fixed;
