--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 /*** Home page ***/
 
 
-
 body{
 	background-color:#acdccb;
 	padding-top:32px;
@@ -95,6 +94,7 @@ font-size:1.4em;
 #conzept.row{
 	width: 800px;
   padding-right: 40px;
+  padding-top:60px;
 }
 #conzept p{
   font-size:1.15em;
@@ -292,7 +292,7 @@ padding-top: 20px;
 /**** Contact ****/
 
 #contact{
-	background-image:url(https://iyaw.github.io/WebDev/img/mq5.jpg);
+	background-image:url(http://yawzek.bitballoon.com/img/mq5.jpg);
 	/*background-image:url(file:///Users/zeke/Documents/WebDev/img/mq5.jpg);*/
 	background-attachment: fixed;
 	background-size:cover;
@@ -304,25 +304,25 @@ padding-top: 20px;
 }
 
 #contact a{
-	font-size: 1.5em;
+	font-size: 1em;
 	font-family:'Josefin Sans', sans-serif;
 	padding-left: 10px;
 	padding-right:10px;
 	color:orange;
 }
 #contact p{
-	font-size: 1.5em;
+	font-size: 1.2em;
 	font-family:'Josefin Sans', sans-serif;
 }
 #contact h2{
 	color: white;
 }
 #contact h3{
-	font-size:1.5em;
+	font-size:1em;
 }
 
 #contact .glyphicon:hover{
-	font-size: 2em;
+	font-size: 1.5em;
 	color:lightgreen;
 }
 
@@ -412,11 +412,216 @@ glyphicon:hover{
 }
 
 
-
-
 /*.... Styling the footer....*/
 .footer{
-	padding: 20px;
-	align-content: center;
-	color:darkred;
+	padding: 2px;
+	text-align:center;
+	background-color:#373c44;
+
+}
+
+
+.footer a:visited {
+       color: white;
+}
+.footer a:active {
+       color: #ff0000;
+}
+
+
+#dp{
+	padding-top: 30px;
+	padding-bottom:50px;
+    margin-top: 80px;
+	text-align: center;
+	font: white;
+}
+
+#prey{
+	background-color:xxxx;
+	padding-bottom:5px;
+	padding-top:2px;
+}
+
+iframe{
+	height: 20px;
+	margin-left: 0px;
+	padding-top: 2px;
+}
+
+
+
+#uvideo iframe{
+	width: 660px;
+	height: 315px;
+}
+
+.form-control{
+	width: 80%;
+
+}
+
+.modal-content{
+	padding: 40px 100px 30px 100px;
+	width: 100%;
+	align:left;
+}
+
+
+.modal-content p{
+	text-align: left;
+
+}
+
+.modal-content h6{
+	text-align: justify;
+}
+
+.modal-button{
+	padding-top: 30px;
+
+}
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+
+#social {
+  margin: 20px 10px;
+  text-align:center;
+	 width: 100%;
+}
+
+.smGlobalBtn { /* global button class */
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    border:2px solid #ddd; /* add border to the buttons */
+    box-shadow: 0 3px 3px #999;
+    padding: 0px;
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
+    font-size: 25px;
+    font-weight: normal;
+    line-height: 2em;
+    border-radius: 27px;
+    -moz-border-radius:27px;
+    -webkit-border-radius:27px;
+}
+
+/* facebook button class*/
+.facebookBtn{
+    background: #4060A5;
+}
+
+.facebookBtn:before{ /* use :before to add the relevant icons */
+    font-family: "FontAwesome";
+    content: "\f09a"; /* add facebook icon */
+}
+
+.facebookBtn:hover{
+    color: #4060A5;
+    background: #fff;
+    border-color: #4060A5; /* change the border color on mouse hover */
+}
+
+/* twitter button class*/
+.twitterBtn{
+    background: #00ABE3;
+}
+
+.twitterBtn:before{
+      font-family: "FontAwesome";
+      content: "\f099"; /* add twitter icon */
+
+}
+
+.twitterBtn:hover{
+      color: #00ABE3;
+      background: #fff;
+      border-color: #00ABE3;
+}
+
+/* google plus button class*/
+.googleplusBtn{
+    background: #e64522;
+}
+
+.googleplusBtn:before{
+      font-family: "FontAwesome";
+      content: "\f0d5"; /* add googleplus icon */
+}
+
+.googleplusBtn:hover{
+      color: #e64522;
+      background: #fff;
+      border-color: #e64522;
+}
+
+/* linkedin button class*/
+.linkedinBtn{
+    background: #0094BC;
+}
+
+.linkedinBtn:before{
+      font-family: "FontAwesome";
+      content: "\f0e1"; /* add linkedin icon */
+}
+
+.linkedinBtn:hover{
+      color: #0094BC;
+      background: #fff;
+      border-color: #0094BC;
+}
+
+/* pinterest button class*/
+.pinterestBtn{
+    background: #cb2027;
+}
+
+.pinterestBtn:before{
+      font-family: "FontAwesome";
+      content: "\f0d2"; /* add pinterest icon */
+}
+
+.pinterestBtn:hover{
+      color: #cb2027;
+      background: #fff;
+      border-color: #cb2027;
+}
+
+/* tumblr button class*/
+.tumblrBtn{
+    background: #3a5876;
+}
+
+.tumblrBtn:before{
+      font-family: "FontAwesome";
+      content: "\f173"; /* add tumblr icon */
+}
+
+.tumblrBtn:hover{
+      color: #3a5876;
+      background: #fff;
+      border-color: #3a5876;
+}
+
+/* rss button class*/
+.rssBtn{
+    background: #e88845;
+}
+
+.rssBtn:before{
+      font-family: "FontAwesome";
+      content: "\f09e"; /* add rss icon */
+}
+
+.rssBtn:hover{
+      color: #e88845;
+      background: #fff;
+      border-color: #e88845;
+}
+
+.foota-copyright{
+	color: white;
 }
